# onlineshop

./: Dockerfile  README.md  deploy-docker-secrets.py  deploy-docker.sh  deploy.sh  pyproject.toml
.cert/: U4akKAeKhU-GrZEU7LmEp1FXsPDY0sxqvAxtZsME7aU
.config/: gunicorn.py  onlineshop.nginx  supervisord.conf
.github/workflows/: main.yml
app/: .coveragerc  pytest.ini
app/cart/: cart.py  urls.py  views.py
app/cart/templates/cart/: detail.html
app/config/: settings.py
app/coupon/: models.py  urls.py  views.py
app/coupon/migrations/: 0001_initial.py
app/order/: forms.py  iamport.py  models.py  urls.py  views.py
app/order/migrations/: 0001_initial.py
app/shop/: admin.py  models.py  tests.py  urls.py  views.py
app/shop/migrations/: 0001_initial.py
app/shop/templates/shop/: detail.html  list.html
app/static/js/: checkout.js
app/templates/: base.html
templates/: base.html
