[tool.poetry]
name = "onlineshop"
version = "0.1.0"
description = ""
authors = ["moonpeter <moonpeter@kakao.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = ">3.0"
psycopg2-binary = "^2.8.5"
boto3 = "^1.13.13"
django-storages = "^1.9.1"
gunicorn = "^20.0.4"
supervisor = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
